fix button visible on disable

--- a/app/layout-v3/sections/toolbox/detail.module.scss
+++ b/app/layout-v3/sections/toolbox/detail.module.scss
@@ -16,6 +16,10 @@
   & > button {
     height: 2rem;
     aspect-ratio: 1 / 1;
+
+    &:disabled {
+      visibility: hidden;
+    }
   }
 
   & > .indicators {
